--- a/style.css
+++ b/style.css
@@ -193,3 +193,31 @@ font-weight: bold;
 
 padding : 50px;
 }
+
+#big_picture
+{
+	width : 100%;
+height : 900px;
+	background-image: url('/images/Layer\ 8.png');
+	background-size: cover;
+}
+
+
+.pixel {
+	height : 900px;
+padding-left : 20%;
+line-height: 30px;
+
+
+
+}
+
+.pixel > h2 {
+	width : 60%;
+	margin-bottom: 20px;
+	line-height: 50px;
+}
+.pixel > p {
+width : 60%;
+	font-size : 14px;
+}
