--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ height: 900px;
 
 #iphone {
 
-    width: 70%;
+    min-width: 70%;
 
 
 }
@@ -69,6 +69,10 @@ height: 900px;
 .iphone {
 
 	padding-top : 100px;
+	height: auto;
+	position:relative;
+	vertical-align: middle;
+    border-style: none;
 }
 
 .logoh {
@@ -77,7 +81,10 @@ height: 900px;
 	margin-left : 50px;
 }
 
+.headertext {
 
+	padding :15%;
+}
 
 .headertext > h1{
 	width: 100%;
@@ -87,8 +94,7 @@ font-size: 50px;
 
 }
 .headertext > p{
-	width: 100%;
-font-size: 14px;
+font-size: 17px;
 line-height: 2;
 
 
@@ -183,11 +189,7 @@ font-weight: bold;
 		background-size: cover;
 }
 
-.featured {
 
-	height: 300px;
-	width: 100%;
-}
 
 .featured > div {
 
@@ -219,5 +221,29 @@ line-height: 30px;
 }
 .pixel > p {
 width : 60%;
-	font-size : 14px;
+	font-size : 16px;
+}
+
+#apropos {
+padding-top : 50px;
+	background-color: #82ca9c;
+}
+
+
+
+.aproposcol {
+
+	margin: 200px;
+}
+
+.raisons {
+line-height: 1.7;
+	height : 400px;
+	width : 30%;
+
+}
+
+.raisons > p {
+	
+	margin: 20px;
 }
